Kafka added to process emails